@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
  <notes>
+* [jan] Respect excluded mail addresses in Maildrop vacation driver (Request #10077).
 * [jan] Fix access to debug handler in Timsieved driver.
 * [jan] Fix deleting single conditions from a rule (Bug #10253).
  </notes>
@@ -950,6 +951,7 @@
    <date>2011-06-14</date>
    <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
    <notes>
+* [jan] Respect excluded mail addresses in Maildrop vacation driver (Request #10077).
 * [jan] Fix access to debug handler in Timsieved driver.
 * [jan] Fix deleting single conditions from a rule (Bug #10253).
    </notes>
