@@ -2,6 +2,8 @@
 v2.0.3-git
 ----------
 
+[jan] Respect excluded mail addresses in Maildrop vacation driver (Request
+      #10077).
 [jan] Fix access to debug handler in Timsieved driver.
 [jan] Fix deleting single conditions from a rule (Bug #10253).
 
